<resources>
    <string name="app_name">Inspector</string>
    <string name="header_title">Educard POS</string>
    <string name="title_home">Back</string>
    <string name="active">Active</string>
    <string name="logout_description">Image View used for logout</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password yes</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ihavecard">I have active card</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">Signin</string>
    <string name="next">Next action</string>
    <string name="unknown_error">Unknown error, try again</string>
    <string name="previous">Previous</string>
    <string name="canteen">Canteen</string>
    <string name="transaction_list">Transactions</string>
    <string name="card_is_new">This card is new</string>
    <string name="card_is_blank">The card is blank</string>
    <string name="processing">"Processing wait ..."</string>
    <string name="pin">"PIN (4 Digits)</string>
    <string name="confirm_pin">"Confirm PIN</string>
    <string name="invalid_id">"Invalid ID</string>
    <string name="welcomeback">"Welcome back</string>
    <string name="currency">"RWF</string>
    <string name="total_balance">"Total Balance</string>
    <string name="date">"Date</string>
    <string name="card_enrollment">"Enroll Student Card</string>
    <string name="student_card_enrollment">"Enroll Student Card</string>
    <string name="date_pattern">"dd/MM/yyyy</string>
    <string name="taginformation_log">"TAG-INFORMATION</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="availableactions">Actions</string>
    <string name="signin">Signin</string>
    <string name="checkbalance">Check Balance</string>
    <string name="cardtransaction">Card Transaction</string>
    <string name="checkout">Checkout</string>
    <string name="checkouthistory">Checkout History</string>
    <string name="accountdetails">Account Details</string>
    <string name="attendance">Attendance</string>
    <string name="library">Library</string>
    <string name="transport">Transport</string>
    <string name="footer">EduPOS v1.0</string>
    <string name="account">Account</string>
    <string name="validate_card">Validate</string>
    <string name="check_student">Check Student</string>
    <string name="new_attendance">New</string>
    <string name="attendance_history">History</string>
    <string name="cardinformation">Card</string>
    <string name="assign_card">Register Card</string>
    <string name="register_student_with_card">Register Student with Card</string>
    <string name="roomdbname">eduposdb</string>
    <string name="validate_message">HOLD THE CARD CLOSE AND WAIT</string>
    <string name="save">Save</string>
    <string name="holderid">Holder ID</string>
    <string name="last_transaction_time">Last transaction time</string>
    <string name="no_transaction_so_far">No transaction so fa</string>
    <string name="unknown">Unknown</string>
    <string name="waitwhileprocessing">Processing wait...</string>
    <string name="search">Search</string>
    <string name="student_reg_no">Student Reg No</string>
    <string name="search_hint">Your account number</string>
    <string name="search_student">Search student</string>
    <string name="transact">Transact</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="invalid_operation">Operation Not Allowed</string>
    <string name="studentid">Student Reg No</string>
    <string name="tapcard">Tap Card to get details</string>
    <string name="attendance_message">Enter ID and TAP the card</string>
    <string name="card_details">Card Details</string>
    <string name="startdate">Start date</string>
    <string name="add">Add</string>
    <string name="endddate">End date</string>
    <string name="card_id">Card ID</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="confirm">Confirm</string>
    <string name="filter_by_date">Filter by date</string>
    <string name="student_details">Student Details</string>
    <string name="transaction">Transaction</string>
    <string name="initial_balance">Initial balance: 0 RWF</string>
    <string name="tap_to_enroll">TAP NFC Card to enroll student</string>
    <string name="enter_card_pin">Enter card PIN</string>
    <string name="settlement">Settlement</string>
    <string name="recent_settlement">Recent Settlement</string>
    <string name="recent_transaction">Recent Transactions</string>
    <string name="settlement_amount">Settlement Amount</string>
    <string name="request_settlement">Request Settlement</string>
    <string name="balance">Balance</string>
    <string name="available_balance">Available Balance</string>
    <string name="request_payment">Request Payment</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="amount_requested">Amount Requested</string>
    <string name="getting_balance">Getting balance, wait …</string>
    <string name="your_balance">Your balance</string>
    <string name="device_id">Device ID:</string>
    <string name="success">Success:</string>
    <string name="cardisnew">Card is new</string>
    <string name="unregistered">Unregistered</string>
    <string name="successfulpayment">Successfully paid, balance is</string>
    <string name="username_password_invalid_string">Ensure 3 characters for both username and password</string>
    <string name="xxx">xxx</string>
    <string name="topup">Top Up</string>
    <string name="dots">...</string>
    <string name="available_on_card">Available on your card</string>
    <string name="report">Report</string>
    <string name="last_transaction">Last Transaction</string>
    <string name="quickaction">Quick Actions</string>
    <string name="new_pin">New PIN</string>
    <string name="old_pin">Old PIN</string>
    <string name="pin_dontmatch">PIN do not match</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="assigning_card_wait">Registering, wait </string>
    <string name="action_not_allowed">Action not allowed</string>
    <string name="missing_data">"Missing data</string>
    <string name="missing_value">Missing value</string>
    <string name="student_name">Student name</string>
    <string name="card_holder">Card Holder</string>
    <string name="card_balance">Card Balance</string>
    <string name="unassigned_card">Unassigned Card</string>
    <string name="tap_card_to_transact">Tap card to transact</string>
    <string name="student_registration_number">Student registration number</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="empty_fields">Empty fields</string>
    <string name="transaction_type">Transaction type</string>
    <string name="payment_type">Payment type</string>
    <string name="phone_number">Phone number</string>
    <string name="marks_deduction">Marks deductions</string>

</resources>