<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.pin.ChangePinFragment"
    android:background="@color/main_background_color">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:id="@+id/rl_header_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/main_green_color"
        android:layout_alignParentTop="true"
        android:padding="@dimen/ten">

        <LinearLayout
            android:id="@+id/ll_from_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/tv_search_student_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:textSize="@dimen/fifteen"
                android:text="Welcome, man"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/img_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/outline_logout_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_header_title"
        android:padding="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change PIN"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:textColor="#014C92"
            android:layout_marginBottom="20sp"/>


        <RelativeLayout
            android:id="@+id/rl_student_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:layout_below="@id/tv_main_title"
            android:padding="10dp"
            android:background="@color/main_background_color"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_student_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textSize="30sp"
                android:fontFamily="sans-serif-black"/>

            <TextView
                android:id="@+id/tv_student_reg_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_student_name"
                android:layout_marginTop="5sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:layout_below="@+id/rl_student_details"
            android:background="@drawable/custom_card"
            android:layout_marginTop="20sp">

            <EditText
                android:id="@+id/et_old_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_pin"
                android:layout_alignParentTop="true"
                android:textColor="#717171"
                android:textSize="16sp"
                android:layout_marginTop="15sp"
                android:background="@drawable/search_edittext_style"/>

            <EditText
                android:id="@+id/et_new_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_pin"
                android:layout_below="@+id/et_old_pin"
                android:textColor="#717171"
                android:textSize="16sp"
                android:layout_marginTop="15sp"
                android:background="@drawable/search_edittext_style"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_below="@id/et_new_pin"
                android:textColor="@color/white"
                android:layout_marginTop="20sp"
                android:background="@drawable/search_transaction_button_background"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>